--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "An app where you can manage your tasks",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mongodb": "^6.11.0",
+    "react": "^18.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
